@@ -1,5 +1,12 @@
 2003-09-29  Havoc Pennington  <hp@redhat.com>
 
+	* src/async-getprop.c (async_get_property_handler): attempt to fix
+	this to return the data as an array of long even on 64-bit as with
+	XGetWindowProperty() breakage, bug #114035, credit to Gwenole
+	Beauchesne for tracking down.
+
+2003-09-29  Havoc Pennington  <hp@redhat.com>
+
 	* src/xprops.c (cvtINT16toInt): fix the 64-bit check not to use 
 	macros from the X tree that don't get set
 
